dark counts implemented by unitaries

--- a/quantum_network_simulation.ipynb
+++ b/quantum_network_simulation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOSnjB65Ns5MSCBZGXEqZyR"
+      "authorship_tag": "ABX9TyPUcojQmgpcvySkkdVm9jct"
     },
     "kernelspec": {
       "name": "python3",
@@ -25,9 +25,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "358c9969-d1d9-4353-c5f3-b0093dc84bd2"
+        "outputId": "9dc09903-04d3-4c5b-f2fb-0dfc04a170c9"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -35,7 +35,7 @@
           "text": [
             "Collecting qutip\n",
             "  Downloading qutip-5.0.3.post1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (28.0 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m28.0/28.0 MB\u001b[0m \u001b[31m11.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m28.0/28.0 MB\u001b[0m \u001b[31m15.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: numpy>=1.22 in /usr/local/lib/python3.10/dist-packages (from qutip) (1.25.2)\n",
             "Requirement already satisfied: scipy>=1.9 in /usr/local/lib/python3.10/dist-packages (from qutip) (1.11.4)\n",
             "Requirement already satisfied: packaging in /usr/local/lib/python3.10/dist-packages (from qutip) (24.1)\n",
@@ -57,7 +57,7 @@
       "metadata": {
         "id": "HRVKsEv9Etd-"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,6 +137,11 @@
         "    return op\n",
         "\n",
         "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "def state_inserter(rho_initial, target_qubits, state):\n",
         "  \"\"\"\n",
         "    Takes a density matrix of a network, inserts the state 'state' into the slots of the target_qubits.\n",
@@ -214,13 +219,13 @@
         "  return rho_t\n",
         "\n",
         "\n",
-        "def dark_counts_entang_gen(rho_initial, q0, q1, n, P_link):\n",
-        "  \"\"\"\n",
-        "  q1 experiences the dark counts. q0 is included in the partial trace as\n",
-        "  entanglement is broken otherwise\n",
-        "  n = total probability that a pair is established = P_link * n_ch(d)\n",
-        "  NOTE: This only does one target_qubit\n",
-        "  \"\"\"\n",
+        "\n",
+        "def dark_counts(rho_initial, target, P_link):\n",
+        "  num_qubits_left = target\n",
+        "  num_qubits_right = (num_qubits -1) - target\n",
+        "  qubits_left_list = [i for i in range(num_qubits_left)]\n",
+        "  qubits_right_list = [i + num_qubits_left+2 for i in range(num_qubits_right)]\n",
+        "\n",
         "  # channel efficiency\n",
         "  n_ch = lambda L: np.exp(-L/L_att)\n",
         "\n",
@@ -228,15 +233,25 @@
         "  n = P_link * n_ch(d)\n",
         "\n",
         "  # the chance for a detector to click (including dark counts)\n",
-        "  n_eff = 1 - (1 - n) * (1 - p_d) ** 2\n",
+        "  n_eff = 1 - (1 - n) * ((1 - p_d) ** 2)\n",
         "\n",
         "  # given a click occurs, the probability it is from a real event\n",
         "  alpha = lambda n: (n * (1 - p_d)) / n_eff\n",
+        "  k = 1 - alpha(n)\n",
         "\n",
-        "  dark_count_rho = rho_initial.ptrace([q0, q1]) * alpha(n) + (1 - alpha(n)) / 2 * tensor(rho_initial.ptrace(q1) , I())\n",
-        "  rho = state_inserter(rho_initial = rho_initial,\n",
-        "                      target_qubits = [q0,q1], state = dark_count_rho)\n",
+        "  # defining Krauss operators\n",
+        "  K0 = np.sqrt(1 - 3 * k / 4) * pad_op(op=I(), left_padding=num_qubits_left, right_padding=num_qubits_right)\n",
+        "  K1 = np.sqrt(k / 4) * pad_op(op=sigmax(), left_padding=num_qubits_left, right_padding=num_qubits_right)\n",
+        "  K2 = np.sqrt(k / 4) * pad_op(op=sigmay(), left_padding=num_qubits_left, right_padding=num_qubits_right)\n",
+        "  K3 = np.sqrt(k / 4) * pad_op(op=sigmaz(), left_padding=num_qubits_left, right_padding=num_qubits_right)\n",
+        "  error_ops = [K1, K2, K3]\n",
+        "\n",
+        "  # applying Krauss ops\n",
+        "  rho = K0 * rho_initial * K0.dag()\n",
+        "  for op in error_ops:\n",
+        "    rho += op * rho_initial * op.dag()\n",
         "  return rho\n",
+        "\n",
         "\n",
         "\n",
         "def initial_F_rho(rho_initial, target_qubits: List[int], F_initial: float):\n",
@@ -269,7 +284,7 @@
       "metadata": {
         "id": "W29qfNdbEvbo"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -324,8 +339,8 @@
         "  rho = dephasing_channel(rho=rho, t = d/c, left_padding = num_qubits_left + 1, right_padding = num_qubits_right)\n",
         "\n",
         "  # ADDING DARK COUNTS NOISE\n",
-        "  rho = dark_counts_entang_gen(rho, q0, q1, n, P_link)\n",
-        "\n",
+        "  rho = dark_counts(rho_initial=rho, target=q1, P_link=P_link)\n",
+        "  #rho = dark_counts_entang_gen(rho_initial=rho,q0=q0, q1=q1, P_link=P_link)\n",
         "  #TIMING\n",
         "  global current_time\n",
         "  time_entang = time_for_link(eta_eff, T_p)\n",
@@ -340,7 +355,7 @@
       "metadata": {
         "id": "UtxWBjOk22Fx"
       },
-      "execution_count": 4,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -427,7 +442,7 @@
       "metadata": {
         "id": "dbY9SV5HG7qL"
       },
-      "execution_count": 5,
+      "execution_count": 71,
       "outputs": []
     },
     {
@@ -467,7 +482,7 @@
       "metadata": {
         "id": "KOZOmmI9GEfq"
       },
-      "execution_count": 6,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -513,9 +528,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yutT_TixTTHM",
-        "outputId": "a4dd0fe9-1722-4294-a756-5090bb664183"
+        "outputId": "004318f9-4315-47d8-d945-eeca5ceed151"
       },
-      "execution_count": 7,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "stream",
@@ -629,9 +644,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vcUcuasuH7Me",
-        "outputId": "34a38b20-f9ea-42e3-dbfe-4238e2d17b58"
+        "outputId": "e4a59ae3-9ede-4e90-e45b-d2a3467bb709"
       },
-      "execution_count": 13,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
@@ -639,7 +654,7 @@
           "text": [
             "....\n",
             "----------------------------------------------------------------------\n",
-            "Ran 4 tests in 0.015s\n",
+            "Ran 4 tests in 0.011s\n",
             "\n",
             "OK\n"
           ]
@@ -670,7 +685,7 @@
       "metadata": {
         "id": "-yBX8zfddScg"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -688,7 +703,7 @@
         "id": "ugfrMqZPi9RA",
         "outputId": "037356ca-485a-4208-eaaf-0cb7c9fac1a7"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -731,7 +746,7 @@
         "id": "1dLBx9d-jEl4",
         "outputId": "b94d0617-19f1-4099-dfe0-21efda792067"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
