corrected path evaluation

--- a/packet_switched_network_simulation.ipynb
+++ b/packet_switched_network_simulation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPq9eJIJiJrONX+NX3D+u66"
+      "authorship_tag": "ABX9TyPUrf6vkZ+Elkpzj8vYZp1G"
     },
     "kernelspec": {
       "name": "python3",
@@ -134,20 +134,22 @@
         "\n",
         "# Define a function to route frames from one node to the next hop\n",
         "def route_frame(env, frame, network, current_node):\n",
-        "    # Calculate the shortest path from the source to the destination\n",
-        "    path = nx.shortest_path(network, source=frame.source, target=frame.destination, weight='weight')\n",
+        "    # Calculate the shortest path from the current node to the destination\n",
+        "    path = nx.shortest_path(network, source=current_node.name, target=frame.destination, weight='weight')\n",
         "    # Determine the next hop in the path\n",
-        "    next_hop = path[path.index(current_node.name) + 1]\n",
-        "    print(path)\n",
+        "    next_hop = path[1]\n",
         "    # Get the next node object from the dictionary\n",
         "    next_node = node_dict[next_hop]\n",
+        "\n",
         "    # Simulate the transmission delay based on the edge weight\n",
         "    transmission_delay = network[current_node.name][next_hop]['weight']\n",
         "    yield env.timeout(transmission_delay)\n",
         "    frame.update_storage_time(transmission_delay)\n",
+        "\n",
         "    if frame.status == 'discarded':\n",
         "        print(f\"Time {env.now}: Frame {frame.frame_id} discarded en route at {current_node.name}\")\n",
         "        return  # Stop forwarding if frame is discarded\n",
+        "\n",
         "    frame.path_traveled.append(next_hop)  # Record the path traveled\n",
         "    print(f\"Time {env.now}: Frame {frame.frame_id} forwarded from {current_node.name} to {next_hop}\")\n",
         "    # Put the frame in the next node's queue\n",
@@ -163,12 +165,12 @@
         "            network.add_node(node)\n",
         "            # Connect to the right neighbor\n",
         "            if j < cols - 1:\n",
-        "                network.add_edge(node, f'Node_{i}_{j+1}', weight=1)\n",
-        "                network.add_edge(f'Node_{i}_{j+1}', node, weight=1)\n",
+        "                network.add_edge(node, f'Node_{i}_{j+1}')\n",
+        "                network.add_edge(f'Node_{i}_{j+1}', node)\n",
         "            # Connect to the bottom neighbor\n",
         "            if i < rows - 1:\n",
-        "                network.add_edge(node, f'Node_{i+1}_{j}', weight=1)\n",
-        "                network.add_edge(f'Node_{i+1}_{j}', node, weight=1)\n",
+        "                network.add_edge(node, f'Node_{i+1}_{j}')\n",
+        "                network.add_edge(f'Node_{i+1}_{j}', node)\n",
         "    return nodes\n",
         "\n",
         "# Create and initialize the simulation environment\n",
@@ -220,7 +222,7 @@
       "metadata": {
         "id": "JfpgU4EQvYlI"
       },
-      "execution_count": 47,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -237,9 +239,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gSg3kliK7kyR",
-        "outputId": "1659e49f-4c4d-4ac7-df46-2717565ddd12"
+        "outputId": "cf023498-a787-4099-bf18-9974fa85791b"
       },
-      "execution_count": 48,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
@@ -268,9 +270,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IsGwzvPZ2j8R",
-        "outputId": "63ab9486-5956-4fdc-e183-5f920c916bb2"
+        "outputId": "81117772-4d13-4f75-a6b3-f21a64b5bcbf"
       },
-      "execution_count": 49,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,112 +280,112 @@
           "text": [
             "\n",
             "Time 5: Frame 1 created at Node_0_0, destined for Node_2_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_0\n",
             "Time 6: Frame 1 forwarded from Node_0_0 to Node_0_1\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_1\n",
             "Time 8: Frame 1 forwarded from Node_0_1 to Node_0_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_2\n",
             "\n",
             "Time 10: Frame 2 created at Node_0_0, destined for Node_2_2\n",
             "Time 10: Frame 1 forwarded from Node_0_2 to Node_1_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_0\n",
             "Time 11: Frame 2 forwarded from Node_0_0 to Node_0_1\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_1_2\n",
             "Time 12: Frame 1 forwarded from Node_1_2 to Node_2_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_1\n",
             "Time 13: Frame 2 forwarded from Node_0_1 to Node_0_2\n",
             "Time 13: Frame 1 delivered at Node_2_2, from Node_0_0 to Node_2_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_2\n",
             "\n",
             "Time 15: Frame 3 created at Node_0_0, destined for Node_2_2\n",
             "Time 15: Frame 2 forwarded from Node_0_2 to Node_1_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_0\n",
             "Time 16: Frame 3 forwarded from Node_0_0 to Node_0_1\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_1_2\n",
             "Time 17: Frame 2 forwarded from Node_1_2 to Node_2_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_1\n",
             "Time 18: Frame 3 forwarded from Node_0_1 to Node_0_2\n",
             "Time 18: Frame 2 delivered at Node_2_2, from Node_0_0 to Node_2_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_2\n",
             "\n",
             "Time 20: Frame 4 created at Node_0_0, destined for Node_2_2\n",
             "Time 20: Frame 3 forwarded from Node_0_2 to Node_1_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_0\n",
             "Time 21: Frame 4 forwarded from Node_0_0 to Node_0_1\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_1_2\n",
             "Time 22: Frame 3 forwarded from Node_1_2 to Node_2_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_1\n",
             "Time 23: Frame 4 forwarded from Node_0_1 to Node_0_2\n",
             "Time 23: Frame 3 delivered at Node_2_2, from Node_0_0 to Node_2_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_2\n",
             "\n",
             "Time 25: Frame 5 created at Node_0_0, destined for Node_2_2\n",
             "Time 25: Frame 4 forwarded from Node_0_2 to Node_1_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_0\n",
             "Time 26: Frame 5 forwarded from Node_0_0 to Node_0_1\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_1_2\n",
             "Time 27: Frame 4 forwarded from Node_1_2 to Node_2_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_1\n",
             "Time 28: Frame 5 forwarded from Node_0_1 to Node_0_2\n",
             "Time 28: Frame 4 delivered at Node_2_2, from Node_0_0 to Node_2_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_2\n",
             "\n",
             "Time 30: Frame 6 created at Node_0_0, destined for Node_2_2\n",
             "Time 30: Frame 5 forwarded from Node_0_2 to Node_1_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_0\n",
             "Time 31: Frame 6 forwarded from Node_0_0 to Node_0_1\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_1_2\n",
             "Time 32: Frame 5 forwarded from Node_1_2 to Node_2_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_1\n",
             "Time 33: Frame 6 forwarded from Node_0_1 to Node_0_2\n",
             "Time 33: Frame 5 delivered at Node_2_2, from Node_0_0 to Node_2_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_2\n",
             "\n",
             "Time 35: Frame 7 created at Node_0_0, destined for Node_2_2\n",
             "Time 35: Frame 6 forwarded from Node_0_2 to Node_1_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_0\n",
             "Time 36: Frame 7 forwarded from Node_0_0 to Node_0_1\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_1_2\n",
             "Time 37: Frame 6 forwarded from Node_1_2 to Node_2_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_1\n",
             "Time 38: Frame 7 forwarded from Node_0_1 to Node_0_2\n",
             "Time 38: Frame 6 delivered at Node_2_2, from Node_0_0 to Node_2_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_2\n",
             "\n",
             "Time 40: Frame 8 created at Node_0_0, destined for Node_2_2\n",
             "Time 40: Frame 7 forwarded from Node_0_2 to Node_1_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_0\n",
             "Time 41: Frame 8 forwarded from Node_0_0 to Node_0_1\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_1_2\n",
             "Time 42: Frame 7 forwarded from Node_1_2 to Node_2_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_1\n",
             "Time 43: Frame 8 forwarded from Node_0_1 to Node_0_2\n",
             "Time 43: Frame 7 delivered at Node_2_2, from Node_0_0 to Node_2_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_2\n",
             "\n",
             "Time 45: Frame 9 created at Node_0_0, destined for Node_2_2\n",
             "Time 45: Frame 8 forwarded from Node_0_2 to Node_1_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_0\n",
             "Time 46: Frame 9 forwarded from Node_0_0 to Node_0_1\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_1_2\n",
             "Time 47: Frame 8 forwarded from Node_1_2 to Node_2_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_1\n",
             "Time 48: Frame 9 forwarded from Node_0_1 to Node_0_2\n",
             "Time 48: Frame 8 delivered at Node_2_2, from Node_0_0 to Node_2_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_2\n",
             "\n",
             "Time 50: Frame 10 created at Node_0_0, destined for Node_2_2\n",
             "Time 50: Frame 9 forwarded from Node_0_2 to Node_1_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_0\n",
             "Time 51: Frame 10 forwarded from Node_0_0 to Node_0_1\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_1_2\n",
             "Time 52: Frame 9 forwarded from Node_1_2 to Node_2_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_1\n",
             "Time 53: Frame 10 forwarded from Node_0_1 to Node_0_2\n",
             "Time 53: Frame 9 delivered at Node_2_2, from Node_0_0 to Node_2_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_0_2\n",
             "Time 55: Frame 10 forwarded from Node_0_2 to Node_1_2\n",
-            "['Node_0_0', 'Node_0_1', 'Node_0_2', 'Node_1_2', 'Node_2_2']\n",
+            "Node_0_0 Node_1_2\n",
             "Time 57: Frame 10 forwarded from Node_1_2 to Node_2_2\n",
             "Time 58: Frame 10 delivered at Node_2_2, from Node_0_0 to Node_2_2\n",
             "\n",
