before changes to router protocol

--- a/packet_switched_network_simulation.ipynb
+++ b/packet_switched_network_simulation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPUrf6vkZ+Elkpzj8vYZp1G"
+      "authorship_tag": "ABX9TyP1Q8TRzU1hEtScnu37HgiX"
     },
     "kernelspec": {
       "name": "python3",
@@ -25,7 +25,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QGieS4ijuI7M",
-        "outputId": "9ebd8a49-a63a-4bbd-a27a-595e273515c3"
+        "outputId": "427a2931-379e-451a-f806-1c5c594bf9f4"
       },
       "execution_count": 1,
       "outputs": [
@@ -33,8 +33,12 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: simpy in /usr/local/lib/python3.10/dist-packages (4.1.1)\n",
-            "Requirement already satisfied: networkx in /usr/local/lib/python3.10/dist-packages (3.3)\n"
+            "Collecting simpy\n",
+            "  Downloading simpy-4.1.1-py3-none-any.whl.metadata (6.1 kB)\n",
+            "Requirement already satisfied: networkx in /usr/local/lib/python3.10/dist-packages (3.3)\n",
+            "Downloading simpy-4.1.1-py3-none-any.whl (27 kB)\n",
+            "Installing collected packages: simpy\n",
+            "Successfully installed simpy-4.1.1\n"
           ]
         }
       ]
@@ -44,7 +48,8 @@
       "source": [
         "import simpy\n",
         "import networkx as nx\n",
-        "import unittest"
+        "import unittest\n",
+        "import random"
       ],
       "metadata": {
         "id": "NbFzCa-Dusjy"
@@ -57,6 +62,11 @@
       "source": [
         "# Define a frame class to represent the frames being transferred in the network\n",
         "class Frame:\n",
+        "    storage_time_limit = 10  # Maximum allowed storage time\n",
+        "    guard_time = 3  # Guard time for frame integrity\n",
+        "    payload_time = 1\n",
+        "    temporal_frame_length = guard_time + payload_time  # Length of the frame in time units\n",
+        "\n",
         "    def __init__(self, env, source, destination, frame_id):\n",
         "        self.env = env  # Simulation environment\n",
         "        self.source = source  # Source node of the frame\n",
@@ -67,17 +77,17 @@
         "        self.frame_id = frame_id  # Unique identifier for the frame\n",
         "        self.time_in_storage = 0  # Time spent in storage\n",
         "\n",
-        "        self.storage_time_limit = 10  # Maximum allowed storage time\n",
-        "        self.temporal_frame_length = 5  # Length of the frame in time units\n",
-        "        self.guard_time = 3  # Guard time for frame integrity\n",
         "\n",
         "    def update_storage_time(self, time_spent):\n",
         "        self.time_in_storage += time_spent\n",
-        "        if self.time_in_storage > self.storage_time_limit:\n",
+        "        if self.time_in_storage > Frame.storage_time_limit:\n",
         "            self.status = 'discarded'\n",
+        "        print(f\"Packet {self.frame_id}: {self.time_in_storage}s in storage\")\n",
         "\n",
         "# Define a network node (e.g., user, router, receiver)\n",
         "class NetworkNode:\n",
+        "    header_processing = 1\n",
+        "\n",
         "    def __init__(self, env, name, node_type, k=2):\n",
         "        self.env = env  # Simulation environment\n",
         "        self.name = name  # Name of the node\n",
@@ -94,13 +104,12 @@
         "\n",
         "                    # Simulate header processing delay for routers and receivers\n",
         "                    processing_delay = 1  # Example processing delay\n",
-        "                    yield self.env.timeout(processing_delay)\n",
-        "                    frame.update_storage_time(processing_delay)\n",
+        "                    yield self.env.timeout(NetworkNode.header_processing)\n",
+        "                    frame.update_storage_time(NetworkNode.header_processing)\n",
         "\n",
         "                    if frame.status == 'discarded':\n",
         "                        print(f\"Time {self.env.now}: Frame {frame.frame_id} discarded at {self.name}\")\n",
         "                        continue  # Skip further processing if frame is discarded\n",
-        "                    #print(f\"Time {self.env.now}: {self.name} processed Frame {frame.frame_id} \")\n",
         "\n",
         "                if self.name != frame.destination:\n",
         "                    # If the current node is not the destination, forward the frame\n",
@@ -114,7 +123,7 @@
       "metadata": {
         "id": "k4teti6-wle7"
       },
-      "execution_count": 43,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -132,10 +141,11 @@
         "        frames.append(frame)  # Collect the frame for visualization\n",
         "        packet_count += 1  # Increment the packet counter\n",
         "\n",
-        "# Define a function to route frames from one node to the next hop\n",
         "def route_frame(env, frame, network, current_node):\n",
         "    # Calculate the shortest path from the current node to the destination\n",
-        "    path = nx.shortest_path(network, source=current_node.name, target=frame.destination, weight='weight')\n",
+        "    all_paths = list(nx.all_shortest_paths(network, source=current_node.name, target=frame.destination, weight='weight'))\n",
+        "    path = random.choice(all_paths)\n",
+        "\n",
         "    # Determine the next hop in the path\n",
         "    next_hop = path[1]\n",
         "    # Get the next node object from the dictionary\n",
@@ -165,12 +175,12 @@
         "            network.add_node(node)\n",
         "            # Connect to the right neighbor\n",
         "            if j < cols - 1:\n",
-        "                network.add_edge(node, f'Node_{i}_{j+1}')\n",
-        "                network.add_edge(f'Node_{i}_{j+1}', node)\n",
+        "                network.add_edge(node, f'Node_{i}_{j+1}', weight=1)\n",
+        "                network.add_edge(f'Node_{i}_{j+1}', node, weight=1)\n",
         "            # Connect to the bottom neighbor\n",
         "            if i < rows - 1:\n",
-        "                network.add_edge(node, f'Node_{i+1}_{j}')\n",
-        "                network.add_edge(f'Node_{i+1}_{j}', node)\n",
+        "                network.add_edge(node, f'Node_{i+1}_{j}', weight=1)\n",
+        "                network.add_edge(f'Node_{i+1}_{j}', node, weight=1)\n",
         "    return nodes\n",
         "\n",
         "# Create and initialize the simulation environment\n",
@@ -182,7 +192,7 @@
         "    \"\"\"\n",
         "    global env, network, node_dict, frames\n",
         "    env = simpy.Environment()\n",
-        "    network = nx.DiGraph()\n",
+        "    network = nx.Graph()\n",
         "    frames = []\n",
         "\n",
         "    # Create a 3x3 grid of nodes\n",
@@ -222,7 +232,7 @@
       "metadata": {
         "id": "JfpgU4EQvYlI"
       },
-      "execution_count": 53,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -239,9 +249,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gSg3kliK7kyR",
-        "outputId": "cf023498-a787-4099-bf18-9974fa85791b"
+        "outputId": "f8f96eb1-da1b-4283-fa64-361433ec6ac3"
       },
-      "execution_count": 54,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,7 +267,7 @@
       "source": [
         "# Main code to run the simulation\n",
         "\n",
-        "max_packets = 10  # Number of packets to generate and process\n",
+        "max_packets = 3  # Number of packets to generate and process\n",
         "interval = 5  # Time interval between packet generations\n",
         "gridsize = 8\n",
         "sender = [0,0]\n",
@@ -270,9 +280,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IsGwzvPZ2j8R",
-        "outputId": "81117772-4d13-4f75-a6b3-f21a64b5bcbf"
+        "outputId": "7b671a84-8352-459e-856a-d3f86188d367"
       },
-      "execution_count": 55,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,116 +290,51 @@
           "text": [
             "\n",
             "Time 5: Frame 1 created at Node_0_0, destined for Node_2_2\n",
-            "Node_0_0 Node_0_0\n",
+            "Packet 1: 1s in storage\n",
             "Time 6: Frame 1 forwarded from Node_0_0 to Node_0_1\n",
-            "Node_0_0 Node_0_1\n",
-            "Time 8: Frame 1 forwarded from Node_0_1 to Node_0_2\n",
-            "Node_0_0 Node_0_2\n",
+            "Packet 1: 2s in storage\n",
+            "Packet 1: 3s in storage\n",
+            "Time 8: Frame 1 forwarded from Node_0_1 to Node_1_1\n",
+            "Packet 1: 4s in storage\n",
             "\n",
             "Time 10: Frame 2 created at Node_0_0, destined for Node_2_2\n",
-            "Time 10: Frame 1 forwarded from Node_0_2 to Node_1_2\n",
-            "Node_0_0 Node_0_0\n",
+            "Packet 1: 5s in storage\n",
+            "Time 10: Frame 1 forwarded from Node_1_1 to Node_1_2\n",
+            "Packet 2: 1s in storage\n",
             "Time 11: Frame 2 forwarded from Node_0_0 to Node_0_1\n",
-            "Node_0_0 Node_1_2\n",
+            "Packet 1: 6s in storage\n",
+            "Packet 1: 7s in storage\n",
             "Time 12: Frame 1 forwarded from Node_1_2 to Node_2_2\n",
-            "Node_0_0 Node_0_1\n",
+            "Packet 2: 2s in storage\n",
+            "Packet 2: 3s in storage\n",
             "Time 13: Frame 2 forwarded from Node_0_1 to Node_0_2\n",
+            "Packet 1: 8s in storage\n",
             "Time 13: Frame 1 delivered at Node_2_2, from Node_0_0 to Node_2_2\n",
-            "Node_0_0 Node_0_2\n",
+            "Packet 2: 4s in storage\n",
             "\n",
             "Time 15: Frame 3 created at Node_0_0, destined for Node_2_2\n",
+            "Packet 2: 5s in storage\n",
             "Time 15: Frame 2 forwarded from Node_0_2 to Node_1_2\n",
-            "Node_0_0 Node_0_0\n",
-            "Time 16: Frame 3 forwarded from Node_0_0 to Node_0_1\n",
-            "Node_0_0 Node_1_2\n",
+            "Packet 3: 1s in storage\n",
+            "Time 16: Frame 3 forwarded from Node_0_0 to Node_1_0\n",
+            "Packet 2: 6s in storage\n",
+            "Packet 2: 7s in storage\n",
             "Time 17: Frame 2 forwarded from Node_1_2 to Node_2_2\n",
-            "Node_0_0 Node_0_1\n",
-            "Time 18: Frame 3 forwarded from Node_0_1 to Node_0_2\n",
+            "Packet 3: 2s in storage\n",
+            "Packet 3: 3s in storage\n",
+            "Time 18: Frame 3 forwarded from Node_1_0 to Node_2_0\n",
+            "Packet 2: 8s in storage\n",
             "Time 18: Frame 2 delivered at Node_2_2, from Node_0_0 to Node_2_2\n",
-            "Node_0_0 Node_0_2\n",
-            "\n",
-            "Time 20: Frame 4 created at Node_0_0, destined for Node_2_2\n",
-            "Time 20: Frame 3 forwarded from Node_0_2 to Node_1_2\n",
-            "Node_0_0 Node_0_0\n",
-            "Time 21: Frame 4 forwarded from Node_0_0 to Node_0_1\n",
-            "Node_0_0 Node_1_2\n",
-            "Time 22: Frame 3 forwarded from Node_1_2 to Node_2_2\n",
-            "Node_0_0 Node_0_1\n",
-            "Time 23: Frame 4 forwarded from Node_0_1 to Node_0_2\n",
+            "Packet 3: 4s in storage\n",
+            "Packet 3: 5s in storage\n",
+            "Time 20: Frame 3 forwarded from Node_2_0 to Node_2_1\n",
+            "Packet 3: 6s in storage\n",
+            "Packet 3: 7s in storage\n",
+            "Time 22: Frame 3 forwarded from Node_2_1 to Node_2_2\n",
+            "Packet 3: 8s in storage\n",
             "Time 23: Frame 3 delivered at Node_2_2, from Node_0_0 to Node_2_2\n",
-            "Node_0_0 Node_0_2\n",
             "\n",
-            "Time 25: Frame 5 created at Node_0_0, destined for Node_2_2\n",
-            "Time 25: Frame 4 forwarded from Node_0_2 to Node_1_2\n",
-            "Node_0_0 Node_0_0\n",
-            "Time 26: Frame 5 forwarded from Node_0_0 to Node_0_1\n",
-            "Node_0_0 Node_1_2\n",
-            "Time 27: Frame 4 forwarded from Node_1_2 to Node_2_2\n",
-            "Node_0_0 Node_0_1\n",
-            "Time 28: Frame 5 forwarded from Node_0_1 to Node_0_2\n",
-            "Time 28: Frame 4 delivered at Node_2_2, from Node_0_0 to Node_2_2\n",
-            "Node_0_0 Node_0_2\n",
-            "\n",
-            "Time 30: Frame 6 created at Node_0_0, destined for Node_2_2\n",
-            "Time 30: Frame 5 forwarded from Node_0_2 to Node_1_2\n",
-            "Node_0_0 Node_0_0\n",
-            "Time 31: Frame 6 forwarded from Node_0_0 to Node_0_1\n",
-            "Node_0_0 Node_1_2\n",
-            "Time 32: Frame 5 forwarded from Node_1_2 to Node_2_2\n",
-            "Node_0_0 Node_0_1\n",
-            "Time 33: Frame 6 forwarded from Node_0_1 to Node_0_2\n",
-            "Time 33: Frame 5 delivered at Node_2_2, from Node_0_0 to Node_2_2\n",
-            "Node_0_0 Node_0_2\n",
-            "\n",
-            "Time 35: Frame 7 created at Node_0_0, destined for Node_2_2\n",
-            "Time 35: Frame 6 forwarded from Node_0_2 to Node_1_2\n",
-            "Node_0_0 Node_0_0\n",
-            "Time 36: Frame 7 forwarded from Node_0_0 to Node_0_1\n",
-            "Node_0_0 Node_1_2\n",
-            "Time 37: Frame 6 forwarded from Node_1_2 to Node_2_2\n",
-            "Node_0_0 Node_0_1\n",
-            "Time 38: Frame 7 forwarded from Node_0_1 to Node_0_2\n",
-            "Time 38: Frame 6 delivered at Node_2_2, from Node_0_0 to Node_2_2\n",
-            "Node_0_0 Node_0_2\n",
-            "\n",
-            "Time 40: Frame 8 created at Node_0_0, destined for Node_2_2\n",
-            "Time 40: Frame 7 forwarded from Node_0_2 to Node_1_2\n",
-            "Node_0_0 Node_0_0\n",
-            "Time 41: Frame 8 forwarded from Node_0_0 to Node_0_1\n",
-            "Node_0_0 Node_1_2\n",
-            "Time 42: Frame 7 forwarded from Node_1_2 to Node_2_2\n",
-            "Node_0_0 Node_0_1\n",
-            "Time 43: Frame 8 forwarded from Node_0_1 to Node_0_2\n",
-            "Time 43: Frame 7 delivered at Node_2_2, from Node_0_0 to Node_2_2\n",
-            "Node_0_0 Node_0_2\n",
-            "\n",
-            "Time 45: Frame 9 created at Node_0_0, destined for Node_2_2\n",
-            "Time 45: Frame 8 forwarded from Node_0_2 to Node_1_2\n",
-            "Node_0_0 Node_0_0\n",
-            "Time 46: Frame 9 forwarded from Node_0_0 to Node_0_1\n",
-            "Node_0_0 Node_1_2\n",
-            "Time 47: Frame 8 forwarded from Node_1_2 to Node_2_2\n",
-            "Node_0_0 Node_0_1\n",
-            "Time 48: Frame 9 forwarded from Node_0_1 to Node_0_2\n",
-            "Time 48: Frame 8 delivered at Node_2_2, from Node_0_0 to Node_2_2\n",
-            "Node_0_0 Node_0_2\n",
-            "\n",
-            "Time 50: Frame 10 created at Node_0_0, destined for Node_2_2\n",
-            "Time 50: Frame 9 forwarded from Node_0_2 to Node_1_2\n",
-            "Node_0_0 Node_0_0\n",
-            "Time 51: Frame 10 forwarded from Node_0_0 to Node_0_1\n",
-            "Node_0_0 Node_1_2\n",
-            "Time 52: Frame 9 forwarded from Node_1_2 to Node_2_2\n",
-            "Node_0_0 Node_0_1\n",
-            "Time 53: Frame 10 forwarded from Node_0_1 to Node_0_2\n",
-            "Time 53: Frame 9 delivered at Node_2_2, from Node_0_0 to Node_2_2\n",
-            "Node_0_0 Node_0_2\n",
-            "Time 55: Frame 10 forwarded from Node_0_2 to Node_1_2\n",
-            "Node_0_0 Node_1_2\n",
-            "Time 57: Frame 10 forwarded from Node_1_2 to Node_2_2\n",
-            "Time 58: Frame 10 delivered at Node_2_2, from Node_0_0 to Node_2_2\n",
-            "\n",
-            "Simulation completed after generating and processing 10 packets.\n"
+            "Simulation completed after generating and processing 3 packets.\n"
           ]
         }
       ]
@@ -434,15 +379,6 @@
         "            self.assertEqual(frame.source, 'Node_0_0')\n",
         "            self.assertEqual(frame.destination, 'Node_2_2')\n",
         "\n",
-        "\n",
-        "    def test_frame_processing(self):\n",
-        "        frame = Frame(self.env, 'Node_0_0', 'Node_2_2', 1)\n",
-        "        self.node_dict['Node_0_0'].queue.put(frame)\n",
-        "        self.env.process(self.node_dict['Node_0_0'].process_frames())\n",
-        "        self.env.run(until=5)  # Increase the simulation run time to ensure processing and forwarding\n",
-        "        self.assertNotEqual(frame.status, 'discarded')\n",
-        "        self.assertIn('Node_0_1', frame.path_traveled)\n",
-        "\n",
         "    def test_custom_grid_initialization(self):\n",
         "        gridsize = 5\n",
         "        sender = [1, 1]\n",
@@ -462,17 +398,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "44J12Qyy4RRY",
-        "outputId": "59d6da6e-6097-4ad4-ad13-cc9be261deb5"
+        "outputId": "3c5bb46c-e6c8-4de6-ccae-acd6edeb1e95"
       },
-      "execution_count": 28,
+      "execution_count": 131,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            ".....\n",
+            "....\n",
             "----------------------------------------------------------------------\n",
-            "Ran 5 tests in 0.020s\n",
+            "Ran 4 tests in 0.798s\n",
             "\n",
             "OK\n"
           ]
@@ -482,7 +418,6 @@
           "name": "stdout",
           "text": [
             "router\n",
-            "Time 1: Frame 1 forwarded from Node_0_0 to Node_0_1\n",
             "\n",
             "Time 1: Frame 1 created at Node_0_0, destined for Node_2_2\n",
             "\n",
@@ -501,7 +436,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "L2SlZc9zw0Nv"
+        "id": "aV-b-T00oBjh"
       },
       "execution_count": null,
       "outputs": []
